--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <section class="section">
       <h2>About Tahir Zari Corporation</h2>
       <p style="margin-top: 20px;">
-        Tahir Zari Corporation is a trusted name in agricultural supplies. Based in [Your City], we have been providing high-quality seeds and pesticides to farmers across the region for over a decade. 
+        Tahir Zari Corporation is a trusted name in agricultural supplies. Based in Toba Tek Singh, we have been providing high-quality seeds and pesticides to farmers across the region for over a decade. 
       </p>
       <p>
         Our goal is to help farmers grow more, earn more, and protect their crops with tested and certified products. We believe in modern farming solutions that are both effective and environmentally responsible.
