--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       <p>You can reach us using the information below:</p>
 
       <div class="contact-info" style="margin-top: 20px;">
-        <p><strong>📍 Address:</strong> [Your Store Address Here]</p>
+        <p><strong>📍 Address:</strong> uggi adda Mongi banglaw road</p>
         <p><strong>📞 Phone:</strong> 0300-1234567</p>
         <p><strong>📧 Email:</strong> tahirzaricorp@example.com</p>
       </div>
